--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "irc": "^0.5.2",
-        "ziggy": "^2.4.0"
+        "ziggy-js": "^2.2.1"
     }
 }
